Changelog
=========

6.2-dev0 - (unreleased)
---------------------------

6.1 - (2023-06-01)
---------------------------
* Bug fix: Hide Footer Login action if user is logged-in
  [avoinea - refs #253198]

6.0 - (2023-05-31)
---------------------------
* Refactor: Remove eea.api.taxonomy dependency
  [nileshgulia1 - refs #145360]

5.0 - (2023-05-05)
---------------------------
* Task: Remove eea.cache dependency
  [iulianpetchesi - refs #251471]

4.7 - (2023-01-31)
---------------------------
* Task: Add endpoint in order to get the captcha key from registry
  [iulianpetchesi - refs #157143]

4.6 - (2023-01-30)
---------------------------
* Change: Modify endpoint permission
  [iulianpetchesi - refs #157143]

4.5 - (2023-01-30)
---------------------------
* Task: Return true/false for captcha post
  [iulianpetchesi refs #157143]

4.4 - (2023-01-27)
---------------------------
* Task: Add missing IEeaKitkatLayer for captcha restapi
  [iulianpetchesi refs #157143]

4.3 - (2023-01-20)
---------------------------
* Feature: Send captcha data as bytes, add @captchaverify endpoints
  [iulianpetchesi refs #157143]

4.2 - (2023-01-12)
---------------------------
* Feature: Added friendlycaptcha settings + verify to be used with redmine
  helpdesk block
  [iulianpetchesi refs #157143]

4.1 - (2022-11-25)
---------------------------
* Feature: Add contact_extra_actions: faqs and careers
  [avoinea refs #151856]

4.0 - (2022-11-18)
---------------------------
* Feature: New category actions: footer, social, copyright and contact
  [avoinea refs #151856]

3.1 - (2022-08-25)
---------------------------
* Feature: Add PATCH support for `@system` endpoint in order to be able to update frontend version
  [avoinea refs #153334]

3.0 - (2022-08-23)
---------------------------
* Feature: Added backend/frontend version registry records + automatically update the version on zope startup
  [iulianpetchesi refs #153334]

2.0 - (2022-06-13)
---------------------------