@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
+<rolemap>
+  <permissions>
+    <permission acquire="True"
+                name="View comments"
+    >
+      <role name="Authenticated" />
+    </permission>
+  </permissions>
+</rolemap>
