@@ -84,7 +84,17 @@
       title="Remove eea.api.taxonomy"
       import_profile="eea.kitkat:kitkat_60"
       />
-
   </genericsetup:upgradeSteps>
 
+  <genericsetup:upgradeSteps
+    source="6.0"
+    destination="6.2"
+    profile="eea.kitkat:default">
+
+    <genericsetup:upgradeDepends
+      title="Update permissions for comments"
+      import_profile="eea.kitkat:kitkat_62"
+      />
+  </genericsetup:upgradeSteps>
 </configure>
+
