@@ -3,6 +3,8 @@ Changelog
 
 6.2-dev0 - (unreleased)
 ---------------------------
+* Change: View comments permission only for authenticated
+  [dobri1408 - refs #251360]
 
 6.1 - (2023-06-01)
 ---------------------------
